add youtube link

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -19,11 +19,11 @@
 		style="background-image: url('img/banner-tall.jpg')">
 		<div class="w-full h-96 bg-gradient-to-t from-black to-60%">
 			<div class="text-[5rem] text-center w-full h-full">
-				<p class="mt-32 fa-regular fa-circle-play"></p>
+				<a class="text-white no-underline hover:no-underline visited:text-white mt-32 fa-regular fa-circle-play" href="https://www.youtube.com/watch?v=3c5-ABUkI_M"></a>
 			</div>
 		</div>
 	</header>
-	<main class="w-full">
+	<main class="w-full md:container md:mx-auto">
 		<div class="px-8">
 			<h1 class="text-3xl -mt-24 text-zinc-50 font-title">The Zizi Show</h1>
 			<p class="italic">A Deepfake Drag Cabaret</p>
@@ -113,34 +113,34 @@
 
 		<div class="w-full bg-zinc-100 p-6 text-center text-red-950">
 			<h2 class="font-bold text-xl mb-2">Cast</h2>
-			<div id="cast-image-grid" class="grid grid-cols-2 gap-4">
-				<div class="relative">
-					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+			<div id="cast-image-grid" class="container mx-auto grid grid-cols-2 gap-4 md:grid-cols-3">
+				<div class="flex flex-col items-center">
+					<!-- <i class="self-end fa-brands fa-instagram"></i> -->
 					<img src="img/cast/bolly.jpg" alt="Bolly Illusion Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-red-700 underline-offset-2">Bolly Illusion</p>
 				</div>
-				<div class="relative">
-					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+				<div class="flex flex-col items-center">
+					<!-- <i class="right-1 top-1 fa-brands fa-instagram"></i> -->
 					<img src="img/cast/cara.jpg" alt="Cara Melle Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-orange-700 underline-offset-2">Cara Melle</p>
 				</div>
-				<div class="relative">
-					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+				<div class="flex flex-col items-center">
+					<!-- <i class="right-1 top-1 fa-brands fa-instagram"></i> -->
 					<img src="img/cast/chiyo.jpg" alt="Chiyo Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-lime-600 underline-offset-2">Chiyo</p>
 				</div>
-				<div class="relative">
-					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+				<div class="flex flex-col items-center">
+					<!-- <i class="right-1 top-1 fa-brands fa-instagram"></i> -->
 					<img src="img/cast/dakota.jpg" alt="Dakota Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-teal-700 underline-offset-2">Dakota</p>
 				</div>
-				<div class="relative">
-					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+				<div class="flex flex-col items-center">
+					<!-- <i class="right-1 top-1 fa-brands fa-instagram"></i> -->
 					<img src="img/cast/mahatma.jpg" alt="Mahatma Khandi Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-fuchsia-700 underline-offset-2">Mahatma Khandi</p>
 				</div>
-				<div class="relative">
-					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+				<div class="flex flex-col items-center">
+					<!-- <i class="right-1 top-1 fa-brands fa-instagram"></i> -->
 					<img src="img/cast/mark.jpg" alt="Dahc Dermur Viii Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-pink-700 underline-offset-2">Dahc Dermur Viii</p>
 				</div>
@@ -173,7 +173,7 @@
 				SnatchDragon:
 			</p>
 
-			<img src="img/diagram.gif" draggable="false" />
+			<img class="mx-auto" src="img/diagram.gif" draggable="false" />
 
 			<p>
 				Using machine learning, this process iterates and improves until it can create new, fake faces which are
@@ -190,8 +190,8 @@
 				neural network (here with her movement controlled by Me the Drag Queen).
 			</p>
 
-			<img src="img/diagram-gen-close-small.gif" draggable="false" />
-			<img src="img/diagram-gen-full-small.gif" draggable="false" />
+			<img class="mx-auto" src="img/diagram-gen-close-small.gif" draggable="false" />
+			<img class="mx-auto" src="img/diagram-gen-full-small.gif" draggable="false" />
 			<p>
 				This process was repeated to create deep fakes of all 13 of our wonderful, diverse drag cast.
 			</p>
@@ -263,17 +263,17 @@
 				about drag, and what drag can teach us about A.I.
 			</p>
 			<h2>'Zizi &amp; Me' 2020</h2>
-			<iframe class="w-full aspect-video" src="https://www.youtube.com/embed/vtpVr5KVvnk"
+			<!-- <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/vtpVr5KVvnk"
 				title="YouTube video player" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-				allowfullscreen></iframe>
+				allowfullscreen></iframe> -->
 			<h2>'Zizi: Queering the Dataset' 2019</h2>
-			<iframe src="https://player.vimeo.com/video/388245510" frameborder="0"
-				allow="autoplay; fullscreen" allowFullScreen></iframe>
+			<!-- <iframe src="https://player.vimeo.com/video/388245510" frameborder="0"
+				allow="autoplay; fullscreen" allowFullScreen></iframe> -->
 			<h2>National Gallery X + FLUX - 2020</h2>
-			<iframe src="https://www.youtube.com/embed/QOK97wutH-s" frameborder="0"
+			<!-- <iframe src="https://www.youtube.com/embed/QOK97wutH-s" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-				allowFullScreen></iframe>
+				allowFullScreen></iframe> -->
 		</div>
 	</main>
 
