--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -179,9 +179,12 @@
 				indistinguishable from the real. For Zizi the method I use is called Video-to-Video Synthesis.
 				<sup><a href="#fn3" id="ref3">3</a></sup>
 			</p>
-			Once the neural network has been training for, let's say, three days, it is ready to be fed new movements.
-			Anyone can now control the deep-fake body by running skeleton tracking on a new video and then feeding these
-			into the neural network.
+			<p>
+				Once the neural network has been training for, let's say, three days, it is ready to be fed new
+				movements.
+				Anyone can now control the deep-fake body by running skeleton tracking on a new video and then feeding
+				these
+				into the neural network.
 			</p>
 			<p>
 				These visuals below show how new deep-fake images of Lilly SnatchDragon can be generated from the
