--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -116,32 +116,32 @@
 			<div id="cast-image-grid" class="container mx-auto grid grid-cols-2 gap-4 md:grid-cols-3">
 				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
 					<!-- <i class="self-end fa-brands fa-instagram"></i> -->
-					<img src="img/cast/bolly.jpg" alt="Bolly Illusion Cast Photo" class="rounded-lg">
+					<img draggable="false" src="img/cast/bolly.jpg" alt="Bolly Illusion Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-red-700 underline-offset-2">Bolly Illusion</p>
 				</a>
 				<div class="flex flex-col items-center">
 					<!-- <i class="right-1 top-1 fa-brands fa-instagram"></i> -->
-					<img src="img/cast/cara.jpg" alt="Cara Melle Cast Photo" class="rounded-lg">
+					<img draggable="false" src="img/cast/cara.jpg" alt="Cara Melle Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-orange-700 underline-offset-2">Cara Melle</p>
 				</div>
 				<div class="flex flex-col items-center">
 					<!-- <i class="right-1 top-1 fa-brands fa-instagram"></i> -->
-					<img src="img/cast/chiyo.jpg" alt="Chiyo Cast Photo" class="rounded-lg">
+					<img draggable="false" src="img/cast/chiyo.jpg" alt="Chiyo Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-lime-600 underline-offset-2">Chiyo</p>
 				</div>
 				<div class="flex flex-col items-center">
 					<!-- <i class="right-1 top-1 fa-brands fa-instagram"></i> -->
-					<img src="img/cast/dakota.jpg" alt="Dakota Cast Photo" class="rounded-lg">
+					<img draggable="false" src="img/cast/dakota.jpg" alt="Dakota Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-teal-700 underline-offset-2">Dakota</p>
 				</div>
 				<div class="flex flex-col items-center">
 					<!-- <i class="right-1 top-1 fa-brands fa-instagram"></i> -->
-					<img src="img/cast/mahatma.jpg" alt="Mahatma Khandi Cast Photo" class="rounded-lg">
+					<img draggable="false" src="img/cast/mahatma.jpg" alt="Mahatma Khandi Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-fuchsia-700 underline-offset-2">Mahatma Khandi</p>
 				</div>
 				<div class="flex flex-col items-center">
 					<!-- <i class="right-1 top-1 fa-brands fa-instagram"></i> -->
-					<img src="img/cast/mark.jpg" alt="Dahc Dermur Viii Cast Photo" class="rounded-lg">
+					<img draggable="false" src="img/cast/mark.jpg" alt="Dahc Dermur Viii Cast Photo" class="rounded-lg">
 					<p class="underline decoration-2 decoration-pink-700 underline-offset-2">Dahc Dermur Viii</p>
 				</div>
 			</div>
