--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -12,6 +12,24 @@
 	<link rel="stylesheet" href="output.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+	<link rel="icon" href="favicon.ico" />
+	<title>The Zizi Show - A Deepfake Drag Cabaret</title>
+	<meta name="author" content="Jake Elwes">
+	<meta name="keywords" content="The Zizi Show, Deepfake Drag, Artificial Intelligence, Jake Elwes">
+
+	<meta property="og:description"
+    content="Drag Queens, Drag Kings, Drag Things and Artificial Intelligence... 
+    The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting a groundbreaking new show with a twist. It features acts that have been constructed using deepfake technology, learning how to do drag by watching a diverse group of human performers. The Zizi Show dissects one of the dominant myths about AI, the notion that 'an AI' is a thing we might mistake for a person.">
+  <meta property="og:image" content="https://zizi.ai/zizishow.jpg">
+
+  <meta name="twitter:title" content="The Zizi Show - A Deepfake Drag Cabaret">
+  <meta name="twitter:description"
+    content=" Drag Queens, Drag Kings, Drag Things and Artificial Intelligence... 
+The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting a groundbreaking new show with a twist. It features acts that have been constructed using deepfake technology, learning how to do drag by watching a diverse group of human performers. The Zizi Show dissects one of the dominant myths about AI, the notion that 'an AI' is a thing we might mistake for a person.">
+  <meta name="twitter:image" content="https://zizi.ai/zizishow.jpg">
+
 </head>
 
 <body class="bg-black text-stone-300">
