--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -52,10 +52,10 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 		<div class="px-8">
 			<h1 class="text-3xl -mt-24 text-stone-50 font-title">The Zizi Show</h1>
 			<p class="italic">A Deepfake Drag Cabaret</p>
-			<iframe class="w-full aspect-video my-8" src="https://www.youtube.com/embed/3c5-ABUkI_M"
+			<iframe class="w-full aspect-video my-8" src="https://www.youtube.com/embed/3c5-ABUkI_M?rel=0&autoplay=1"
 				title="Making of The Zizi Show" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-				allowfullscreen></iframe>
+				allowfullscreen="allowfullscreen"></iframe>
 			<!-- <ul>
 			<li>
 				Videos
@@ -421,10 +421,10 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 		</div>
 		<div class="py-8">
 
-			<iframe class="w-full aspect-video my-8" src="https://www.youtube.com/embed/xFvUJxhIakw"
+			<iframe class="w-full aspect-video my-8" src="https://www.youtube.com/embed/xFvUJxhIakw?rel=0&autoplay=1"
 				title="Jake Elwes and Me the Drag Queen answer 10 questions about The Zizi Project" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-				allowfullscreen></iframe>
+				allowfullscreen="allowfullscreen"></iframe>
 		</div>
 
 	</main>
