--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -52,7 +52,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 		<div class="px-8">
 			<h1 class="text-3xl -mt-24 text-stone-50 font-title">The Zizi Show</h1>
 			<p class="italic">A Deepfake Drag Cabaret</p>
-			<iframe class="w-full aspect-video my-8" src="https://www.youtube.com/embed/3c5-ABUkI_M?rel=0&autoplay=1&playsinline=0"
+			<iframe class="w-full aspect-video my-8" src="https://www.youtube.com/embed/3c5-ABUkI_M?rel=0&playsinline=0"
 				title="Making of The Zizi Show" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen="allowfullscreen"></iframe>
@@ -79,6 +79,15 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				The Zizi Project: Other Works
 			</li>
 		</ul> -->
+<div class="font-serif text-center team md:px-20">
+	<p>Created as a multi-channel video installation for the Victoria and Albert Museum by Jake Elwes with 21 of the UK's top drag artists (2019 - 2023).</p>
+
+	<p><a href="https://www.jakeelwes.com/index.html" target="_blank">View on the Artists Website</a></p>
+	<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
+			target="_blank">View on the V&amp;A Website</a></p>
+</div>
+		<img class="mx-auto" src="img/diagram-gen-full-small.gif" />
+
 			<div class="p-4 italic space-y-4 font-serif">
 				<p>
 					"The Zizi Project aims to bring together two things I love, artificial intelligence, and the world
@@ -100,8 +109,9 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				<p class="text-right text-2xl font-serif">- Jake Elwes</p>
 			</div>
 		</div>
-		<img class="mx-auto mt-8" src="img/me.jpg" />
 
+
+		<img class="mx-auto mt-8" src="img/me.jpg" />
 
 		<div class="w-full p-8 md:rounded-lg team text-center space-y-5 bg-cover bg-no-repeat bg-center bg-top"
 			style="background-image: url('img/curtain-bg-full.jpg')">
@@ -147,9 +157,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 					the opening of the new
 					Photography Center.</p>
 
-				<p><a href="https://www.jakeelwes.com/index.html" target="_blank">View on the Artists Website</a></p>
-				<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
-						target="_blank">View on the V&amp;A Website</a></p>
+
 				<p>Email <a
 						href="javascript:window.location.href=atob('bWFpbHRvOnppemlkcmFnc2hvd0BnbWFpbC5jb20/U3ViamVjdD1aaXppIFNob3cgQWNjZXNzIFJlcXVlc3QmYm9keT1QbGVhc2Ugc2VuZCBtZSB0aGUgYWNjZXNzIGNvZGUgZm9yIHppemkuYWksIHRoYW5rIHlvdS4=')"
 						target="_top" class="btn-social btn-outline">zizidragshow@gmail.com</a> to request access to the
@@ -352,7 +360,6 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 			</p>
 
 			<img class="mx-auto" src="img/diagram-gen-close-small.gif" />
-			<img class="mx-auto" src="img/diagram-gen-full-small.gif" />
 			<p>
 				This process was repeated to create deepfakes of all 21 of our wonderful, diverse drag cast.
 			</p>
@@ -421,7 +428,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 		</div>
 		<div class="py-8">
 
-			<iframe class="w-full aspect-video my-8" src="https://www.youtube.com/embed/xFvUJxhIakw?rel=0&autoplay=1&playsinline=0"
+			<iframe class="w-full aspect-video my-8" src="https://www.youtube.com/embed/xFvUJxhIakw?rel=0&playsinline=0"
 				title="Jake Elwes and Me the Drag Queen answer 10 questions about The Zizi Project" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen="allowfullscreen"></iframe>
