dates on main website homepage

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						<h3>The Zizi Show</h3>
 			</a>
 
-			<span style="display:block" class="category">interactive performance, 2020 - <a style="white-space:nowrap" id="show"
+			<span style="display:block" class="category">interactive performance, 2020 - 2023 <a style="white-space:nowrap" id="show"
 					target="_blank" href="https://zizi.ai">visit zizi.ai</a></span>
 		</div>
 		</div>
@@ -162,7 +162,7 @@
 					<img src="images/project-zizi-and-me.jpg" alt="Jake Elwes digital artist" />
 
 					<h3>Zizi & Me</h3>
-					<span class="category">performance collaboration, 2020 (ongoing)</span>
+					<span class="category">performance collaboration, 2020 - 2023 (ongoing)</span>
 				</div>
 			</div>
 		</a>
