dates on main website homepage

--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
 						<h3>The Zizi Show</h3>
 			</a>
 
-			<span style="display:block" class="category">interactive performance, 2020 - 2023 <a style="white-space:nowrap" id="show"
-					target="_blank" href="https://zizi.ai">visit zizi.ai</a></span>
+			<span style="display:block" class="category">video &amp; interactive performance, 2020 - 2023</span>
 		</div>
 		</div>
 
