zizi-about cat pics and small changes

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -56,35 +56,13 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				title="Making of The Zizi Show" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen="allowfullscreen"></iframe>
-			<!-- <ul>
-			<li>
-				Videos
-			</li>
-			<li>
-				The Team
-			</li>
-			<li>
-				Intro
-			</li>
-			<li>
-				The Process | <small><small>footnotes</small></small>
-			</li>
-			<li>
-				About the Artist
-			</li>
-			<li>
-				About the Zizi Project
-			</li>
-			<li>
-				The Zizi Project: Other Works
-			</li>
-		</ul> -->
 <div class="font-serif text-center team md:px-20">
-	<p>Created as a multi-channel video installation for the Victoria and Albert Museum by Jake Elwes with 21 of the UK's top drag artists (2019 - 2023).</p>
-
-	<p><a href="https://www.jakeelwes.com/index.html" target="_blank">View on the Artists Website</a></p>
+	<p>A multi-channel video installation commissioned by the V&A with the support of the Manitou Foundation, created with 21 of London and the UK’s top drag artists.</p>
+<div class="p-4">
 	<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
-			target="_blank">View on the V&amp;A Website</a></p>
+			target="_blank">V&amp;A Information</a></p>
+			<p><a href="https://www.jakeelwes.com/index.html" target="_blank">Artists Website</a> | <a href="https://www.instagram.com/jakeelwes/" target="_blank">Instagram</a></p>
+		</div>
 </div>
 		<img class="mx-auto" src="img/diagram-gen-full-small.gif" />
 
@@ -171,107 +149,107 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 			class="w-full font-serif p-8 text-center text-rose-950 md:rounded-lg bg-gradient-to-b from-stone-100 from-10% via-white via-30% to-stone-200 to-90%">
 			<h2 class="font-bold text-2xl mb-8">Cast</h2>
 			<div id="cast-image-grid" class="container mx-auto grid grid-cols-2 gap-4 md:grid-cols-3">
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
-					<img src="img/cast/amalgam.jpg" alt="Baby Lame Cast Photo">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/baby.lame/" target="_blank">
+					<img src="img/cast/baby.jpg" alt="Baby Lame Cast Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Baby Lame</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/bolly_illusion/" target="_blank">
 
 					<img src="img/cast/bolly.jpg" alt="Bolly-Illusion Cast Photo">
 					<p class="underline decoration-2 decoration-orange-700 underline-offset-2">Bolly-Illusion</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/onlybourgeoisie/" target="_blank">
 
-					<img src="img/cast/amalgam.jpg" alt="Bourgeoisie Photo">
+					<img src="img/cast/bougie.jpg" alt="Bourgeoisie Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Bourgeoisie</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/tastemycaramelle/" target="_blank">
 
 					<img src="img/cast/cara.jpg" alt="Cara Melle Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Cara Melle</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/charlieprobablywood/" target="_blank">
 
-					<img src="img/cast/amalgam.jpg" alt="Charlie Wood Photo">
+					<img src="img/cast/charlie.jpg" alt="Charlie Wood Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Charlie Wood</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/prinxchiyo/" target="_blank">
 
 					<img src="img/cast/chiyo.jpg" alt="Chiyo Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Chiyo</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/dahc_dermur_viii/" target="_blank">
 
-					<img src="img/cast/amalgam.jpg" alt="Dahc Dermur VIII Photo">
+					<img src="img/cast/dahc.jpg" alt="Dahc Dermur VIII Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Dahc Dermur VIII</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/dakota.schiffer/" target="_blank">
 
 					<img src="img/cast/dakota.jpg" alt="Dakota Schiffer Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Dakota Schiffer</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/herrthequeen/" target="_blank">
 
-					<img src="img/cast/amalgam.jpg" alt="HERR Photo">
+					<img src="img/cast/herr.jpg" alt="HERR Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">HERR</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/lillysnatch/" target="_blank">
 
 					<img src="img/cast/lilly.jpg" alt="Lilly SnatchDragon Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Lilly SnatchDragon</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/laviniacoop/" target="_blank">
 
-					<img src="img/cast/amalgam.jpg" alt="Lavinia Co-op Photo">
+					<img src="img/cast/lavinia.jpg" alt="Lavinia Co-op Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Lavinia Co-op</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/lukeslyka/" target="_blank">
 
 					<img src="img/cast/luke.jpg" alt="Luke Slyka Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Luke Slyka</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/mahatmakhandi/" target="_blank">
 
 					<img src="img/cast/mahatma.jpg" alt="Mahatma Khandi Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Mahatma Khandi</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/markanthony.dragking/" target="_blank">
 
 					<img src="img/cast/mark.jpg" alt="Mark Anthony Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Mark Anthony</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/methedragqueen/" target="_blank">
 
 					<img src="img/cast/me.jpg" alt="Me The Drag Queen Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Me The Drag Queen</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/miss.terriboxx/" target="_blank">
 
-					<img src="img/cast/amalgam.jpg" alt="Miss Terri Boxx Photo">
+					<img src="img/cast/terri.jpg" alt="Miss Terri Boxx Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Miss Terri Boxx</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/oedipussi.rex/" target="_blank">
 
 					<img src="img/cast/pussi.jpg" alt="Oedipussi Rex Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Oedipussi Rex</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/mxrubywednesday/" target="_blank">
 
 					<img src="img/cast/ruby.jpg" alt="Ruby Wednesday Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Ruby Wednesday</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/officialsistersister/" target="_blank">
 
 					<img src="img/cast/sister.jpg" alt="Sister Sister, Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Sister Sister</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/tete_bang/" target="_blank">
 
 					<img src="img/cast/tete.jpg" alt="TeTe Bang Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">TeTe Bang</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://instagram.com" target="_blank">
-					<img src="img/cast/amalgam.jpg" alt="Wet Mess Photo">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/wet_mess/" target="_blank">
+					<img src="img/cast/wet.jpg" alt="Wet Mess Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Wet Mess</p>
 				</a>
 
@@ -285,27 +263,27 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 
 			<div class="text-sm space-y-4">
 				<p><i>This Is My Life, Shirley Bassey</i>
-					<br> Movement by <a href="https://instagram.com/" target="_blank">Me The Drag Queen</a>
+					<br> Movement by <a href="https://www.instagram.com/methedragqueen/" target="_blank">Me The Drag Queen</a>
 				</p>
 				<p><i>You Make Me Feel (Mighty Real), Sylvester</i>
-					<br> Movement by <a href="https://instagram.com/" target="_blank">Chiyo</a>
+					<br> Movement by <a href="https://www.instagram.com/prinxchiyo/" target="_blank">Chiyo</a>
 				</p>
 				<p><i>Raise Your Glass, Pink</i>
-					<br> Movement by <a href="https://instagram.com/" target="_blank">Lilly SnatchDragon</a>
+					<br> Movement by <a href="https://www.instagram.com/lillysnatch/" target="_blank">Lilly SnatchDragon</a>
 				</p>
 				<p><i>I Am What I Am, Douglas Hodge</i>
-					<br> Movement by <a href="https://instagram.com/" target="_blank">Me The Drag Queen</a>
+					<br> Movement by <a href="https://www.instagram.com/methedragqueen/" target="_blank">Me The Drag Queen</a>
 				</p>
 				<p><i>Freedom! '90, George Michael</i>
-					<br> Movement by <a href="https://instagram.com/" target="_blank">Mark Anthony</a>
+					<br> Movement by <a href="https://www.instagram.com/markanthony.dragking/" target="_blank">Mark Anthony</a>
 				</p>
 				<p><i>Sweet Dreams (Live), Beyoncé</i>
-					<br> Movement by <a href="https://instagram.com/" target="_blank">Cara Melle</a>
+					<br> Movement by <a href="https://www.instagram.com/tastemycaramelle/" target="_blank">Cara Melle</a>
 				</p>
 				<p><i>Five Years, David Bowie</i>
-					<br> Movement by <a href="https://instagram.com/" target="_blank">Ruby Wednesday</a>
+					<br> Movement by <a href="https://www.instagram.com/mxrubywednesday/" target="_blank">Ruby Wednesday</a>
 				</p>
-				<p>Transition movement by <a href="https://instagram.com/" target="_blank">Wet Mess</a></p>
+				<p>Transition movement by <a href="https://www.instagram.com/wet_mess/" target="_blank">Wet Mess</a></p>
 			</div>
 		</div>
 
@@ -390,11 +368,11 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				<p id="fn1">1. For more information see
 					<a href="https://deepai.org/machine-learning-glossary-and-terms/neural-network">DeepAI.org
 						glossary
-						- 'neural network'</a><a href="#ref1" title="Jump back to footnote 1 in the text.">↩</a>
+						- 'neural network'</a><a href="#ref1" title="Jump back to footnote 1 in the text.">^</a>
 				</p>
 
 				<p id="fn2">2. This accuracy score (loss) is calculated using the gradient descent learning
-					algorithm.<a href="#ref2" title="Jump back to footnote 2 in the text.">↩</a></p>
+					algorithm.<a href="#ref2" title="Jump back to footnote 2 in the text.">^</a></p>
 
 				<p id="fn3">3. <a href="https://arxiv.org/abs/1808.06601" target="_blank">Video-to-Video
 						Synthesis</a>
@@ -405,18 +383,18 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 					(2018) for silhouette estimation. This technique also uses <a
 						href="https://arxiv.org/abs/1612.01925" target="_blank">Flownet</a> (2016) to take into
 					account
-					the motion in the video.<a href="#ref3" title="Jump back to footnote 3 in the text.">↩</a>
+					the motion in the video.<a href="#ref3" title="Jump back to footnote 3 in the text.">^</a>
 				</p>
 				<p id="fn4">4. <a
 						href="https://www.researchgate.net/publication/324670607_Gender_Recognition_or_Gender_Reductionism_The_Social_Implications_of_Embedded_Gender_Recognition_Systems"
 						target="_blank">Gender recognition or gender reductionism? The social implications of
 						embedded
 						gender recognition systems</a> Hamidi, F., Scheuerman, M.K. and Branham, S.M. (2018).<a
-						href="#ref4" title="Jump back to footnote 4 in the text.">↩</a>
+						href="#ref4" title="Jump back to footnote 4 in the text.">^</a>
 				</p>
 				<p id="fn5">5. <a href="https://www.excavating.ai/" target="_blank">Excavating AI: The Politics of
 						Images in Machine Learning Training Sets</a> Kate Crawford and Trevor Paglen.<a href="#ref5"
-						title="Jump back to footnote 5 in the text.">↩</a>
+						title="Jump back to footnote 5 in the text.">^</a>
 				</p>
 				<p>
 					Further reading: <a href="https://www.ajl.org/library/home" target="_blank">Algorithmic Justice
@@ -432,6 +410,10 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				title="Jake Elwes and Me the Drag Queen answer 10 questions about The Zizi Project" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen="allowfullscreen"></iframe>
+		</div>
+
+		<div class="text-center text-xs p-4">
+			© Jake Elwes 2023
 		</div>
 
 	</main>
